Solved spacing issue. Included fa dependency and added gh icon.

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 $button: #4d4d4d;
-@import 'https://fonts.googleapis.com/css?family=Share+Tech+Mono';
+/* @import 'https://fonts.googleapis.com/css?family=Share+Tech+Mono'; */
 @font-face {
   font-family: "Digital";
   src: url("//db.onlinewebfonts.com/t/8e22783d707ad140bffe18b2a3812529.eot");
@@ -9,6 +9,7 @@ $button: #4d4d4d;
 #app {
   height: 100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
